# hypermodern-python-setup

./: LICENSE  README.md  pyproject.toml
hypermodern_python/: pyproject.toml
hypermodern_python/tests/: test_hypermodern_python.py
src/hypermodern_python/: console.py
src/hypermodern_python_setup/: .console.py.swp  console.py  wikipedia.py
