[tool.poetry]
name = "hypermodern-python-setup"
version = "0.1.0"
description = "The hypermodern Python project"
authors = ["scafati98 <eugenio@muttdata.ai>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/scafati98/hypermodern-python-setup"
repository = "https://github.com/scafati98/hypermodern-python-setup"
keywords = ["hypermodern"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
